fix color and black and white button spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -133,7 +133,7 @@ body {
 }
 
 #button_center {
-  width: 200px;
+  width: 250px;
   height: 100%;
   margin: 0 auto;
   position: relative;
@@ -160,7 +160,7 @@ body {
   text-align: right;
   bottom: 10px;
   right: 1px;
-  width: 100px;
+  width: 130px;
   cursor: default; 
   &:hover {
     opacity: .7;
